# web_hw_2

./: Dockerfile  LICENSE  logs.txt  pyproject.toml
