[tool.poetry]
name = "web-hw-2"
version = "0.1.0"
description = ""
authors = ["Oleg Veisa <oleg.veisa@gmail.com>"]
readme = "README.md"
#packages = [{include = "web_hw_2"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
